--- a/src/main/javascriptmvc/views/main/Welcome/toHtml.ejs
+++ b/src/main/javascriptmvc/views/main/Welcome/toHtml.ejs
@@ -1,18 +1,16 @@
 <form class="step regular-form" id="frmWelcome">
     <fieldset>
         <div class="title-wrap">
-            <strong class="label"><%= name %>:</strong>
+            <strong class="label">Welcome Controller</strong>
         </div>
         <div class="form-box">
-            <% $.each(fields,function(ndx, field){ %>
-            <%= printField(ndx,field,values[id]) %>
-            <% }) %>
+            //TODO print dataset names
         </div>
         <div class="ui-widget help-box">
             <div class="ui-state-highlight ui-corner-all help-content">
                 <p>
                     <span class="ui-icon ui-icon-info"></span>
-                    <%= help %>
+                    //TODO display help
                 </p>
             </div>
         </div>
