--- a/src/javascriptmvc/views/main/WelcomeStep.ejs
+++ b/src/javascriptmvc/views/main/WelcomeStep.ejs
@@ -1,7 +1,7 @@
 <form class="step regular-form" id="frmWelcome">
     <fieldset>
         <div class="title-wrap">
-            <strong class="label">Welcome Controller</strong>
+            <strong class="label">Welcome</strong>
         </div>
         <div class="form-box">
             //TODO print dataset names
