--- a/src/javascriptmvc/views/main/wizard.step.fieldset.ejs
+++ b/src/javascriptmvc/views/main/wizard.step.fieldset.ejs
@@ -1,4 +1,4 @@
-<form class="step regular-form" id="<%= id %>" type="fieldset">
+<form class="step regular-form" id="<%= element_id() %>" type="fieldset">
     <fieldset>
         <div class="title-wrap">
             <strong class="label"><%= name %>:</strong>
