--- a/src/javascriptmvc/views/main/WelcomeStep.ejs
+++ b/src/javascriptmvc/views/main/WelcomeStep.ejs
@@ -1,4 +1,4 @@
-<form class="step regular-form" id="frmWelcome">
+<form class="step regular-form" id="WizardStep_frmWelcome">
     <fieldset>
         <div class="title-wrap">
             <strong class="label">Welcome</strong>
