--- a/src/javascriptmvc/views/main/FinalStep.ejs
+++ b/src/javascriptmvc/views/main/FinalStep.ejs
@@ -1,4 +1,4 @@
-<form class="step regular-form" id="FinalStep_frmFinal">
+<form class="step regular-form submit" id="FinalStep_frmFinal">
     <fieldset>
         <div class="title-wrap">
             <strong class="label">Final review:</strong>
