--- a/src/javascriptmvc/views/main/WelcomeStep.ejs
+++ b/src/javascriptmvc/views/main/WelcomeStep.ejs
@@ -15,9 +15,7 @@
             </div>
             <% } %>
             <div class="row">
-                <input type="radio" name="datasets" value="new" checked >
-                <input type="text" id="txtNewDataSetName" value="Type name"/>
-                </input>
+                <label><input type="radio" name="datasets" value="new" checked >Create New...</label>
             </div>
             <div class="row">
                 <span>
