--- a/src/javascriptmvc/engines/Wizard/views/Wizard/initialize.ejs
+++ b/src/javascriptmvc/engines/Wizard/views/Wizard/initialize.ejs
@@ -7,7 +7,7 @@
         <% for(var i = 0,size = forms.length, frm = forms[0]; i<size;frm = forms[++i]){ %>
             <%= frm.toHtml() %>
         <% } %>
-        <form id="navigation" class="navigation">
+        <form class="navigation">
             <ul class="clearfix">
                 <li><button type="button" name="backward" class="backward">Back</button></li>
                 <li><button type="button" name="forward" class="forward">Next</button></li>
