--- a/src/javascriptmvc/stylesheets/main/all.css
+++ b/src/javascriptmvc/stylesheets/main/all.css
@@ -120,6 +120,7 @@ form, fieldset {
 }
 
 .regular-form .form-box {
+    width: 45%;
     float: left;
     margin-right: 21px;
     padding-bottom: 7px;
