--- a/src/javascriptmvc/views/main/WelcomeStep.ejs
+++ b/src/javascriptmvc/views/main/WelcomeStep.ejs
@@ -18,23 +18,10 @@
                 <input type="hidden" id="flgCreateNew" value="false"/>
                 <input type="hidden" id="hdnNewDataSetName" value=""/>
                 <input type="hidden" id="hdnTmplName" value=""/>
-                <button id="btnCreate">Create New...</button>
-            </div>
-            <div id="dlgCreate" title="Create new dataset" style="display: none;">
-                <p class="validateTips">All form fields are required.</p>
-                <form>
-                    <fieldset>
-                        <label for="txtNewDataSetName">Name</label>
-                        <input type="text" name="name" id="txtNewDataSetName" class="text ui-widget-content ui-corner-all">
-                        <label for="tmplName">Use as template:</label>
-                        <select id="tmplName" class="select ui-widget-content ui-corner-all">
-                            <option value="none">none</option>
-                            <% for(var i = 0, size = data.length ; i<size; ++i){ %>
-                            <option value="<%= data[i]%>"><%= data[i]%></option>
-                            <% } %>
-                        </select>
-                    </fieldset>
-                </form>
+                <a href="javascript:void(0)" id="btnCreate" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-primary" title="Create new...">
+                    <span class="ui-button-icon-primary ui-icon ui-icon-circle-plus"></span>
+                    <span class="ui-button-text">Create new...</span>
+                </a>
             </div>
         </div>
         <div class="ui-widget help-box">
